# Simba-ReactNative

./: .mcp.json  App.tsx  _check_ffmpeg.ps1  _check_mpv_sym.ps1  _check_new_libs.ps1  _check_sym.ps1  _check_sym2.ps1  _check_version.ps1  _check_versions.ps1  _check_versions2.ps1  _check_zip.ps1  _extract_all_archs.ps1  _extract_arm64.ps1  _extract_mpv_so.ps1  _replace_all_libs.ps1  _replace_libs.ps1  app-develop.md  app.json  jest.config.js  package-lock.json  package.json  react-native.config.js
__mocks__/: @react-native-documents-picker.js  react-native-fast-image.js  react-native-linear-gradient.js  react-native-safe-area-context.js  react-native-svg.js
__tests__/components/: AppButton.test.tsx  AppText.test.tsx
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  event.cpp  main.cpp  property.cpp
android/app/src/main/cpp/include/mpv/: render.h  render_gl.h
ios/: Podfile
ios/CinePlayer/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/CinePlayer.xcodeproj/: project.pbxproj
ios/CinePlayer.xcodeproj/xcshareddata/xcschemes/: CinePlayer.xcscheme
ios/CinePlayer/Images.xcassets/AppIcon.appiconset/: Contents.json
md/: About_Project.md  UI_UX_Elevation_Progress_Tracker.md  UI_UX_Elevation_Specification_v2.md  UI_UX_Redesign_Atlas_FINISHED_KEPT_OLY_FOR_REFERCEN_NOT_FOR_IMPLEMTATION.md
mockup/: PlayerScreenMockup.tsx  PreferencesScreenMockup.tsx  StartScreenMockup.tsx  index.html  player.html  preferences.html  server.js  start-replica-dark.html  start-replica-light.html  start-replica.css  start.html  styles.css  theme.ts
scripts/: download-icons.js  explore-api.mjs  generate-icons.js  generate-inapp-logo.js  mcp-client.mjs  search-icons.mjs
src/app/: ErrorBoundary.tsx
src/components/: StatusBar.tsx  index.ts
src/components/MiniPlayer/: MiniPlayer.tsx
src/components/core/AppButton/: AppButton.tsx
src/components/core/AppCard/: AppCard.tsx
src/components/core/AppText/: AppText.tsx
src/components/core/AppView/: AppView.tsx
src/components/feedback/EmptyState/: EmptyState.tsx
src/components/feedback/ScanProgressBanner/: ScanProgressBanner.tsx
src/components/feedback/Toast/: Toast.tsx  index.ts
src/components/layout/HomeHeader/: HomeHeader.tsx
src/components/layout/InternalHeader/: InternalHeader.tsx
src/components/player/AudioVisualizer/: AudioVisualizer.tsx
src/components/player/MiniPlayer/: MiniPlayer.tsx
src/components/player/SeekBar/: SeekBar.tsx
src/components/player/TrackSelector/: TrackSelectorModal.tsx
src/components/player/VideoControlsOverlay/: VideoControlsOverlay.tsx
src/components/preferences/: index.tsx
src/components/tabbar/: FloatingTabBar.tsx
src/components/utility/EmptyState/: EmptyState.tsx
src/components/utility/MediaTile/: MediaTile.tsx
src/components/utility/SectionHeader/: SectionHeader.tsx
src/components/utility/SettingsRow/: SettingsRow.tsx
src/components/utility/SvgIcon/: SvgIcon.tsx  index.ts
src/constants/: colors.ts  imagePaths.ts  index.ts  placeholders.ts  radius.ts  svgPaths.ts  typography.ts
src/context/: ThemeContext.tsx  index.ts  theme.types.ts  themes.ts
src/features/playlists/components/: PlaylistModal.tsx
src/hooks/: index.ts  useAutoHideControls.ts  useHaptics.ts  useKeyboard.ts  useOrientation.ts  usePipEntry.ts  usePipLifecycle.ts  usePlayer.ts  useScreenTransition.ts
src/lib/: eventBus.ts  logger.ts
src/native/: NativeMpvPlayer.ts  index.ts  player.api.ts
src/navigation/: HomeStack.tsx  LibraryStack.tsx  RootNavigator.tsx  SettingsStack.tsx  TabNavigator.tsx  index.ts  navigationHelper.ts  types.ts
src/screens/About/: AboutScreen.tsx
src/screens/AudioPlayer/: AudioPlayerScreen.tsx
src/screens/AudioPlayer/components/: LyricsQueuePanel.tsx
src/screens/AudioSettings/: AudioSettingsScreen.tsx
src/screens/FolderBrowser/: FolderBrowserScreen.tsx
src/screens/Home/: HomeScreen.tsx
src/screens/LinkedFolders/: LinkedFoldersScreen.tsx
src/screens/NowPlaying/: NowPlayingScreen.tsx
src/screens/Player/: PlayerScreen.tsx
src/screens/Player/components/: PlayerAudioPanel.tsx  PlayerControls.tsx  PlayerEqualizerPanel.tsx  PlayerGestureLayer.tsx  PlayerLoadingOverlay.tsx  PlayerPlaylistPanel.tsx  PlayerSubtitlePanel.tsx  PlayerTopBar.tsx  PlayerVideoSurface.tsx
src/screens/PlaylistDetail/: PlaylistDetailScreen.tsx
src/screens/Preferences/: PreferencesScreen.tsx
src/screens/Search/: SearchScreen.tsx
src/screens/Settings/: SettingsScreen.tsx
src/screens/Settings/components/: MpvConfigEditor.tsx
src/screens/Start/: StartScreen.tsx
src/screens/VideoPlayer/: VideoPlayerScreen.tsx
src/screens/VideoPlayer/components/: SlideUpPanel.tsx  VideoPlayerAudioPanel.tsx  VideoPlayerControls.tsx  VideoPlayerEqualizerPanel.tsx  VideoPlayerGestureLayer.tsx  VideoPlayerLoadingOverlay.tsx  VideoPlayerPlaylistPanel.tsx  (+3 more)
src/services/: fileService.ts  index.ts  libraryScanService.ts  mediaService.ts  playlistService.ts  sessionService.ts  storageService.ts
src/store/: index.ts  persistConfig.ts  rootReducer.ts
src/store/slices/: pipSlice.ts  playerSlice.ts  playlistSlice.ts  sessionSlice.ts  settingsSlice.ts
src/theme/: animations.ts  index.tsx  tokens.ts
src/types/: index.ts  playlist.ts
src/utils/: index.ts  intelligenceEngine.ts  lrcParser.ts  m3uParser.ts  makeStyles.ts  orientation.ts  timeAgo.ts
(+22 files in other folders)
